--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,50 @@
-* {
-	font-family:"Montserrat",sans-serif
-}
-
 .light,:root {
 	--black: #000000;
 	--indigo: #3F51B5;
 	--white: #FFFFFF;
 	--primary: var(--indigo)!important;
 	--on-primary: var(--white)!important;
-	--on-surface-variant: var(--black)!important
+	--on-surface-variant: var(--black)!important;
+	--font:-apple-system,BlinkMacSystemFont,Montserrat,Roboto,sans-serif!important
 }
 
 .dark {
 	--primary: var(--white)!important;
 	--on-primary: var(--indigo)!important;
-	--on-surface-variant: var(--white)!important
+	--on-surface-variant: var(--white)!important;
+	--font:-apple-system,BlinkMacSystemFont,Montserrat,Roboto,sans-serif!important
+}
+
+/* Elements */
+i {
+    border-radius: 0!important
+}
+
+p {
+	height: auto!important
+}
+
+/* Classes */
+.grid {
+	row-gap: 10rem!important
+}
+
+.min {
+	max-width: fit-content!important
 }
 
 .mtop-small {
 	margin-top: 10px!important
+}
+
+.top-round {
+    border-radius: 16rem 16rem 0 0 !important
+}
+
+/* Elements & Classes */
+a,button,.button,b,em,strong,u {
+	line-height: normal;
+	vertical-align: unset
 }
 
 article,header,.card {
@@ -29,46 +55,11 @@ button.fixed,.button,h6.card {
 	box-shadow: var(--elevate2)!important
 }
 
-.button,button {
+button,.button {
 	font-size:inherit;
 	font-weight:inherit;
-}
-
-i {
-    border-radius: 0!important
-}
-
-p {
-	height: auto!important
-}
-
-a,button,.button,b,em,strong,u {
-	line-height: normal;
-	vertical-align: unset
-}
-
-.grid {
-	row-gap: 10rem!important
 }
 
 .grid > article .tiny-padding {
 	padding: 1rem!important
 }
-
-.min {
-	max-width: fit-content!important
-}
-
-.top-round {
-    border-radius: 16rem 16rem 0 0 !important
-}
-
-/*
-p.small-space,p.space{
-	line-height:24rem
-}
-
-p.medium-space{
-	line-height:32rem
-}
-*/
